# ese5190-2022-lab2b-esp

./: .gitignore  2B_Proposal.md  2B_part1_registers.txt  2B_part2_REPL.txt  CMakeLists.txt  I2C_on_Oscilloscope.md  LAB_feedback_questions  Lab-2b-esp-feedback.md  Lab2B_Brief_Proposal.md  Proposal  Proposal.docx  Proposal.md  README.md  README1.md  ReadMe.md  auto_version.cmake  blink.c  code.py  config.md  lab2b feedback  max7219_8x8dot_spi.c  part1.c
2B_part3_sequencer/: sequencer.c
2B_part4_slowmotion/: slowmotion.c
2B_part6_pioscope/: part_6_README  part_6_README.md  pioscope.c
2B_part7_pio_sequencer/: part_7_README  part_7_README.md  pio_sequencer.c
2B_part8_apds_protocol/: apds_protocol.c  part_8_README  part_8_README.md
code/: CMakeLists.txt
code/flashlight/: CMakeLists.txt  flashlight.c
flashlight/: part5  readme.md
flashlight/p1/: readme.md
flashlight/p1/code/: readme.md
flashlight/p2/: 02_repl.c  CMakeLists.txt  readme.md
flashlight/p3/: readme.md
flashlight/p5/: readme.md
flashlight/p6/: readme.md
flashlight/p7/: readme.md
flashlight/p7/src/PC/: Console_output.txt  sequencer.py
flashlight/p8/: CmakeLists.txt  apds.c  apds.h  part8.c  pio_i2c.c
flashlight/p9/: readme.md
gif/: readme.md
lab/: CMakeLists.txt  Feedback.md  README.md
lab/01_registers/: .README.md.swp  CMakeLists.txt  README.md  flashlight.c  flashlight.uf2  flashlight_reg.c  main.c  neopixel.c  registers.c
lab/02_repl/: CMakeLists.txt  README.md  REPL.c  Repl.c  Repl.uf2  main.c  register_repl.c  repl.c
lab/02_repl/REPL/: CMakeLists.txt  main.c
lab/03_sequencer/: CMakeLists.txt  README.md  lab3.c  lab3.py  neopixel.c  neopixel.h  part3.py  register.h  sequencer.c  sequencer.py  sequencer.uf2
lab/03_sequencer/code/PCside/: Console_output.txt  sequencer.py
lab/03_sequencer/code/REPL/: main.c
lab/03_sequencer/console/: console.py  py-console-app-notes.txt
lab/03_sequencer/rp2040/: sequencer.c
lab/04_slow_motion/: CMakeLists.txt  README.md  Slow Motion.c  main.c  sequencer.py  sequencerSlow.c  test.txt
lab/04_slow_motion/rp2040/: deltasequencer.c
lab/05_i2c_traffic/: I2C.c  I2C_on_Oscilloscope.md  README.md  combined-excel-capture.xlsx
lab/05_i2c_traffic/put_all_to_board/: boot_out.txt  code.py
lab/06_pioscope/: CMakeLists.txt  Logic Analyser.c  README.md  analyser.pio  analyzer.c  capture_1.csv  console.py  logic_analyser.c  main.c  part6.c  pio_logic_analyser.uf2  pioscope.c
lab/06_pioscope/piosequencer/: CMakeLists.txt  logic_analyser.c
lab/06_pioscope/useful_notes/: Note.md
lab/07_pio_sequencer/: APDS9960.c  CMakeLists.txt  README.md  logic_analyzer.h  notes.md  part_7.c  pio.c  pio_sequencer.c  pio_sequencer.csv  pio_sequencer.py  piosequencer.c  sequencer.c  ws2812.c  ws2812.h
lab/07_pio_sequencer/code/PCside/: functions.py  sequencer.py
lab/07_pio_sequencer/code/REPL/: CMakeLists.txt  main.c
lab/07_pio_sequencer/console/: console.py
lab/07_pio_sequencer/rp2040/: piosequencer.c  sequencer.pio
lab/07_pio_sequencer/rp2040/include/: serial_interface.h
lab/08_adps_protocol/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  pio_i2c.c  pio_i2c.h
lab/08_apds_protocol/: README.md  main.c
lab/09_lab_on_a_chip/: APDS9960.c  CMakeLists.txt  README.md  i2c.pio  i2c_bus_scan.c  main.c  neopixel.c  pio_i2c.c  pio_i2c.h  piosequencer.c  piosequencer.h  ws2812.pio
lab/10_protoboard/: README.md  max7219_8x8dot_spi.c
led/: CMakeLists.txt  ledblink.c
mini_project/: 2B_Proposal.md
part1-10/part6/: CMakeLists.txt  logic_analyser.c
